Covafillr News

CHANGES IN VERSION x.y.z

CHANGES IN VERSION 0.4.2
	BUG FIXES:
	    - Rcpp:::Rcpp.plugin.maker changed to Rcpp::Rcpp.plugin.maker
	    - Fixed index bug in tricubic interpolation

CHANGES IN VERSION 0.4.1

	NEW FEATURES:
	    - covafill and covatree now have $copy methods for non-shallow copying

	BUG FIXES:
	    - Files needed for README.md is now included in ./tools

	OTHER CHANGES:
	    - $show is now more informative for covafill and covatree reference classes
	

CHANGES IN VERSION 0.4.0

	NEW FEATURES:
	    - added stat_covafill to be used with the ggplot2 package
	    - added kde function for kernel density estimates
	    - added suggestBandwith function

	OTHER CHANGES:
	    - Changed calculations of standard deviations to follow Fan and Gijbels (1995)
	    - Now possible to have polynomial degree < 1
	    - Changed default polynomial degree to 3
	    - Small changes to C++: Added destructors to tree methods; now registers routines; fixed pedantic warnings

CHANGES IN VERSION 0.3.0

	NEW FEATURES:
	    - It is now possible to get standard deviations for estimates with covafill.

	BUG FIXES:
	    - covafill$predict now set colnames correctly for p=2.
	    - Weight matrix in covafill used sqrt of kernel weights.

	OTHER CHANGES:
	    - Installation with JAGS must now be explicitly invoked
	    - $copy has been disabled for covafill and covatree reference classes.
	    - .Object has been removed from argument list in $initialize  for covafill and covatree reference classes.

VERSION 0.2.1:
	First publicly available version