@@ -1,6 +1,6 @@
 
 #define CHECK_FILL_POINTER(name)		\
-  if(R_ExternalPtrTag(name) != install("covafillPointer")) \
+  if(R_ExternalPtrTag(name) != Rf_install("covafillPointer")) \
     Rf_error("The pointer must be to a covafill object"); \
   if(!R_ExternalPtrAddr(name)) \
     Rf_error("The pointer address is not valid");
@@ -8,10 +8,10 @@
 extern "C" {
 
   static void finalizeFill(SEXP ptr){
-    warning("Finalizing covafill");
+    Rf_warning("Finalizing covafill");
     if(!R_ExternalPtrAddr(ptr))
       return;
-    warning("Deleting covafill");
+    Rf_warning("Deleting covafill");
     delete (covafill<double>*)R_ExternalPtrAddr(ptr);
     R_ClearExternalPtr(ptr);    
   }
@@ -25,7 +25,7 @@ extern "C" {
     if(cfp == NULL){
       return R_NilValue;
     }
-    SEXP val = R_MakeExternalPtr(cfp, install("covafillPointer"), R_NilValue);
+    SEXP val = R_MakeExternalPtr(cfp, Rf_install("covafillPointer"), R_NilValue);
     PROTECT(val);
     R_RegisterCFinalizerEx(val, finalizeFill, TRUE);
     UNPROTECT(1);
@@ -78,7 +78,7 @@ extern "C" {
     CHECK_FILL_POINTER(sp);
     covafill<double>* ptr=(covafill<double>*)R_ExternalPtrAddr(sp);
 
-    if(isMatrix(x)){
+    if(Rf_isMatrix(x)){
       int lsdim = 1;
       if(ptr->p >= 1)
 	lsdim += ptr->getDim();
@@ -86,15 +86,15 @@ extern "C" {
 	lsdim += 0.5 * ptr->getDim() * (ptr->getDim() + 1);
       if(ptr->p >= 3)
 	lsdim += (ptr->p - 2) * ptr->getDim();
-      MatrixXd res(nrows(x),lsdim);
+      MatrixXd res(Rf_nrows(x),lsdim);
       MatrixXd x0 = asMatrix(x);
-      for(int i = 0; i < nrows(x); ++i)
+      for(int i = 0; i < Rf_nrows(x); ++i)
 	res.row(i) = ptr->operator()((vector)x0.row(i), true);
       return asSEXP(res);
-    }else if(isNumeric(x)){
+    }else if(Rf_isNumeric(x)){
       return asSEXP(ptr->operator()(asVector(x), true));
     }else{
-      error("Element must be a matrix or numeric vector");
+      Rf_error("Element must be a matrix or numeric vector");
     }
     return R_NilValue;
   }
@@ -104,7 +104,7 @@ extern "C" {
     CHECK_FILL_POINTER(sp);   
     covafill<double>* ptr=(covafill<double>*)R_ExternalPtrAddr(sp);
     
-    if(isMatrix(x)){
+    if(Rf_isMatrix(x)){
       MatrixXd x0 = asMatrix(x);
       
       int lsdim = 1;
@@ -115,17 +115,17 @@ extern "C" {
       if(ptr->p >= 3)
 	lsdim += (ptr->p - 2) * ptr->getDim();
 
-      MatrixXd res(nrows(x),lsdim);
-      MatrixXd resSE(nrows(x),lsdim);
+      MatrixXd res(Rf_nrows(x),lsdim);
+      MatrixXd resSE(Rf_nrows(x),lsdim);
       
       Array<Array<double,Dynamic,1>, Dynamic,1> tmp(2);
-      for(int i = 0; i < nrows(x); ++i){
+      for(int i = 0; i < Rf_nrows(x); ++i){
 	tmp = ptr->operator()((vector)x0.row(i),int(0), true);
 	res.row(i) = tmp(0);
 	resSE.row(i) = tmp(1);
       }
 
-      SEXP vecOut = PROTECT(allocVector(VECSXP, 2));
+      SEXP vecOut = PROTECT(Rf_allocVector(VECSXP, 2));
       SEXP sr1 = PROTECT(asSEXP(res));
       SEXP sr2 = PROTECT(asSEXP(resSE));
       SET_VECTOR_ELT(vecOut,0,sr1);
@@ -135,7 +135,7 @@ extern "C" {
       return vecOut;
       
     }else{
-      error("Element must be a matrix or numeric vector");
+      Rf_error("Element must be a matrix or numeric vector");
     }
     return R_NilValue;
   }
@@ -144,7 +144,7 @@ extern "C" {
 
   SEXP lnoResiduals(SEXP sp, SEXP excludeRadius){
     CHECK_FILL_POINTER(sp);
-    if(!(isNumeric(excludeRadius) && LENGTH(excludeRadius) == 1))
+    if(!(Rf_isNumeric(excludeRadius) && Rf_length(excludeRadius) == 1))
       Rf_error("Exclude radius must be a scalar");
     covafill<double>* ptr=(covafill<double>*)R_ExternalPtrAddr(sp);
 
