@@ -1,6 +1,6 @@
 
 #define CHECK_TREE_POINTER(name)		\
-  if(R_ExternalPtrTag(name) != install("covatreePointer")) \
+  if(R_ExternalPtrTag(name) != Rf_install("covatreePointer")) \
     Rf_error("The pointer must be to a covatree object"); \
   if(!R_ExternalPtrAddr(name)) \
     Rf_error("The pointer address is not valid");
@@ -8,10 +8,10 @@
 extern "C" {
 
     static void finalizeTree(SEXP ptr){
-    warning("Finalizing covatree");
+    Rf_warning("Finalizing covatree");
     if(!R_ExternalPtrAddr(ptr))
       return;
-    warning("Deleting covatree");
+    Rf_warning("Deleting covatree");
     delete (covatree<double>*)R_ExternalPtrAddr(ptr);
     R_ClearExternalPtr(ptr);    
   }
@@ -26,7 +26,7 @@ extern "C" {
     if(ctp == NULL){
       return R_NilValue;
     }
-    SEXP val = R_MakeExternalPtr(ctp, install("covatreePointer"), R_NilValue);
+    SEXP val = R_MakeExternalPtr(ctp, Rf_install("covatreePointer"), R_NilValue);
     PROTECT(val);
     R_RegisterCFinalizerEx(val, finalizeTree, TRUE);
     UNPROTECT(1);
@@ -44,13 +44,13 @@ extern "C" {
     covatree<double>* ptr=(covatree<double>*)R_ExternalPtrAddr(sp);
     int dim = ptr->getDim();
     
-    if(isMatrix(x)){
-      MatrixXd res(nrows(x),1 + dim);
+    if(Rf_isMatrix(x)){
+      MatrixXd res(Rf_nrows(x),1 + dim);
       MatrixXd x0 = asMatrix(x);
-      for(int i = 0; i < nrows(x); ++i)
+      for(int i = 0; i < Rf_nrows(x); ++i)
 	res.row(i) = ptr->operator()((vector)x0.row(i));
       return asSEXP(res);
-    }else if(isNumeric(x)){
+    }else if(Rf_isNumeric(x)){
       return asSEXP(ptr->operator()(asVector(x)));
     }else{
       Rf_error("Element must be a matrix or numeric vector");
