@@ -17,7 +17,7 @@ using namespace Eigen;
 typedef Array<double,Dynamic,1> vector;
 
 SEXP asSEXP(double x){
-  SEXP y = PROTECT(allocVector(REALSXP,1));
+  SEXP y = PROTECT(Rf_allocVector(REALSXP,1));
   REAL(y)[0] = x;
 
   UNPROTECT(1);
@@ -26,7 +26,7 @@ SEXP asSEXP(double x){
 }
 
 SEXP asSEXP(int x){
-  SEXP y = PROTECT(allocVector(INTSXP,1));
+  SEXP y = PROTECT(Rf_allocVector(INTSXP,1));
   INTEGER(y)[0] = x;
 
   UNPROTECT(1);
@@ -35,7 +35,7 @@ SEXP asSEXP(int x){
 
 SEXP asSEXP(vector x){
   int n = x.size();
-  SEXP y = PROTECT(allocVector(REALSXP,n));
+  SEXP y = PROTECT(Rf_allocVector(REALSXP,n));
 
   for(int i = 0; i < n; ++i)
     REAL(y)[i] = x[i];
@@ -47,7 +47,7 @@ SEXP asSEXP(vector x){
 SEXP asSEXP(MatrixXd x){
   int nr = x.rows();
   int nc = x.cols();
-  SEXP y = PROTECT(allocMatrix(REALSXP,nr,nc));
+  SEXP y = PROTECT(Rf_allocMatrix(REALSXP,nr,nc));
   for(int i = 0; i < nr; ++i)
     for(int j = 0; j < nc; ++j)
       REAL(y)[i+nr*j] = x(i,j);
@@ -57,23 +57,23 @@ SEXP asSEXP(MatrixXd x){
 }
 
 double asDouble(SEXP x){
-  if(!(isNumeric(x) && length(x)==1))
+  if(!(Rf_isNumeric(x) && Rf_length(x)==1))
     Rf_error("Element must be a numeric of length 1");
   return REAL(x)[0];
 }
 
 int asInteger(SEXP x){
-  if(!(isInteger(x) && length(x)==1))
+  if(!(Rf_isInteger(x) && Rf_length(x)==1))
     Rf_error("Element must be an integer vector of length 1");
   return INTEGER(x)[0];
 }
 
 vector asVector(SEXP x) {
 
-  if(!isNumeric(x))
+  if(!Rf_isNumeric(x))
     Rf_error("Element must be a numeric vector");
 
-  int n = length(x);
+  int n = Rf_length(x);
   vector y(n);
 
   for(int i = 0; i < n; ++i)
@@ -85,11 +85,11 @@ vector asVector(SEXP x) {
 MatrixXd asMatrix(SEXP x)
 {
 
-  if(!isMatrix(x))
+  if(!Rf_isMatrix(x))
     Rf_error("Element must be a matrix");
 
-  int nr = nrows(x);
-  int nc = ncols(x);
+  int nr = Rf_nrows(x);
+  int nc = Rf_ncols(x);
   MatrixXd y(nr,nc);
 
   for(int i = 0; i < nr; ++i)
